test/Fail/Issue6959b.err
Issue6959b.agda:18.5-9: error: [UnequalTerms]
The terms
  c
and
  c″
are not equal at type D
when checking that the expression refl has type c ≡ c″
